# penview.nvim

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml
lua/penview/: build.lua  init.lua
lua/penview/websocket/: client.lua  init.lua  server.lua  uuid.lua
rust/penview/: Cargo.toml
rust/penview/src/: main.rs  page_template.rs  render.rs  state.rs
rust/penview/src/routes/: index.rs  mod.rs  preview.rs  watch.rs
rust/penview/templates/: page.html
rust/websocket-ffi/: Cargo.toml
rust/websocket-ffi/src/: lib.rs
rust/websocket-ffi/src/client/: ffi.rs  inbound_event.rs  mod.rs  registry.rs
rust/websocket-ffi/src/server/: client.rs  ffi.rs  inbound_event.rs  mod.rs  registry.rs
