[workspace]
resolver = "2"
members = [
    "rust/penview",
    "rust/websocket-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rahul Garg <rg@vihu.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/vihu/penview.nvim"
homepage = "https://github.com/vihu/penview.nvim"

[workspace.dependencies]
anyhow = "1"
askama = "0.14"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22.0"
clap = { version = "4", features = ["derive"] }
futures-channel = "0.3"
futures-util = "0.3"
inquire = "0.9"
mime_guess = "2"
lazy_static = "1.4.0"
log = "0.4"
log4rs = { version = "1.4", features = ["file_appender"] }
log-panics = "2"
notify = "8"
mlua = "0.9.7"
nvim-oxi = { version = "0.4.2", features = ["neovim-0-9", "libuv", "mlua"] }
open = "5"
parking_lot = "0.12"
pulldown-cmark = "0.13"
resolve-path = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
