[package]
name = "penview"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
inquire.workspace = true
mime_guess.workspace = true
notify.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
resolve-path.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
