[package]
name = "websocket-ffi"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-channel.workspace = true
futures-util.workspace = true
log.workspace = true
log4rs.workspace = true
log-panics.workspace = true
lazy_static.workspace = true
mlua.workspace = true
nvim-oxi.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
